[package]
name = "blobscan-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = { version = "0.6" }
ethers = "1.0.2"
serde = "1.0.151"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
reqwest = { version = "0.11.13", features = ["json"] }
serde_json = "1.0.91"
